--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body{
 /* ----main-section---- */
 .main_section{
     width: var(--MAX-WIDTH);
-    height: fit-content;
+    height: 100vh;
     background-color: var(--MAIN-BACKGROUND);
     color: var(--WHITE);
     position: relative;
